/*
 * $Id: ChangeLog,v 1.3248 2004/07/31 16:40:44 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-31 20:10 UTC-0300 Luiz Rafael Culik <culikr at brturbo.com
  * include/thread.h
    ! on Single thread use the hb_GetStack() function insted of hb_stack var.
      this allow acess to app stack on dll

2004-07-31 20:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/token1.c
    ! Fixed a bug I recently introduced.

2004-07-31 12:05 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/posdiff.c
  + contrib/libct/tests/posdiff.prg
    ! Committed Martin Vogel's fix and test for POSDIFF() function.

2004-07-30 21:25 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * source/rtl/gtalleg/ssf.h
    + Hacks to allow new GTI_KBDSHIFTS code compile under stable 4.x Allegro branches
  * source/rtl/gtalleg/gtalleg.c
    ! Poll keyboard when necessary to get GTI_KBDSHIFTS key states

2004-07-30 19:00 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * include/gtinfo.ch
    + GTI_KBDSHIFTS for query/update kbd shifts state
      (update only for NUM, CAPS & SCROLL locks)
    + GTI_KBD_* constants
      To be ANDed with returned gtInfo() value or ORed to change led keys
  * source/rtl/gtalleg/gtalleg.c
    + K_CTRL_* codes handling
    + GTI_KBDSHIFTS implementation
  * tests/gtinfo.prg
    + Asyncrhonous update of kbd state

2004-07-30 11:21 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/vm/arrayshb.c
    ! Fixed bug in aDel() when array size is 0 and <lSize> is .T.

2004-07-30 09:35 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * contrib/rdd_ads/ads1.c
    * Protected call to AdsFlushFileBuffers() within #if ADS_REQUIRE_VERSION >= 6

2004-07-30 15:45 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/direct.c
     * small optimization
   * source/rtl/filesys.c